Sat Sep 27 10:31:48 2014  Kazuki Tsujimoto  <kazuki@callcc.net>

	* gems/bundled_gems: upgraded to power_assert 0.1.4.

Fri Sep 26 12:52:36 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_write): ASCII-8BIT StringIO
	  should be writable any encoding strings, without conversion.
	  [ruby-core:65240] [Bug #10285]

Fri Sep 26 05:21:01 2014  Eric Wong  <e@80x24.org>

	* object.c (rb_class_real): do not dereference 0 VALUE

	* test/ruby/test_module.rb (test_inspect_segfault):
	  Test case and bug report by Thomas Stratmann.
	  [ruby-core:65214] [Bug #10282]

Fri Sep 26 05:12:10 2014  Eric Wong  <e@80x24.org>

	* man/ruby.1: document stack size env variables
	  [Feature #10197]

Thu Sep 25 19:37:34 2014  Eric Wong  <e@80x24.org>

	* io.c (free_io_buffer): new function for a common pattern
	  (clear_readconv): use free_io_buffer
	  (rb_io_fptr_finalize): ditto

Thu Sep 25 07:51:07 2014  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/matrix.rb: Fix docs. Patched by Ben Woodall. [GH-726]

Wed Sep 24 19:04:04 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* enc/unicode/data: New directory for downloaded Unicode
	  data files.

Wed Sep 24 18:59:59 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Adjusting example for
	  Downloader.download to implementation changes in r47693.

Wed Sep 24 18:06:06 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Removing unused method
	  Downloader.download_if_modified_since.
	  (if ever used, just replace with Downloader.download)

Wed Sep 24 17:59:59 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Fixing raise after return.

Wed Sep 24 17:55:55 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Made Unicode data file location available
	  via :unicode Symbol.

Wed Sep 24 10:45:45 2014  Martin Duerst <duerst@it.aoyama.ac.jp>

	* tool/downloader.rb: Small fix to documentation comment.
