@@ -38,4 +38,10 @@ class URI::TestParser < Test::Unit::TestCase
     assert_equal(['http', nil, 'a', URI::HTTP.default_port, '/%uDCBA', nil, nil],
 		 uri_to_ary(u1))
   end
+
+  def test_raise_bad_uri_for_integer
+    assert_raise(URI::InvalidURIError) do
+      URI.parse(1)
+    end
+  end
 end
